// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    isLeak={false}
    metrics={
      Array [
        "ncloc",
        "bugs",
        "vulnerabilities",
        "code_smells",
        "coverage",
        "duplicated_lines_density",
      ]
    }
    rootComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <Component
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isLeak={false}
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
         
      </td>
      <td
        className=""
        colSpan={10}
      >
         
         
         
      </td>
    </tr>
  </tbody>
  <tbody>
    <Component
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isLeak={false}
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      selected={false}
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        className=""
        colSpan={10}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a search 1`] = `
<table
  className="data boxed-padding zebra"
>
  <tbody>
    <Component
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isLeak={false}
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      selected={false}
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        className=""
        colSpan={10}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for leak 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    isLeak={true}
    metrics={
      Array [
        "new_lines",
        "bugs",
        "vulnerabilities",
        "code_smells",
        "new_coverage",
        "new_duplicated_lines_density",
      ]
    }
    rootComponent={
      Object {
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <Component
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature",
          "type": "SHORT",
        }
      }
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isLeak={true}
      key="foo"
      metrics={Array []}
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
         
      </td>
      <td
        className="leak"
        colSpan={10}
      >
         
         
         
      </td>
    </tr>
  </tbody>
  <tbody>
    <Component
      branchLike={
        Object {
          "isMain": false,
          "mergeBranch": "master",
          "name": "feature",
          "type": "SHORT",
        }
      }
      canBrowse={true}
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      isLeak={true}
      key="foo"
      metrics={Array []}
      rootComponent={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      selected={false}
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        className="leak"
        colSpan={10}
      />
    </tr>
  </tbody>
</table>
`;
